@@ -2,9 +2,7 @@ package stirling.software.SPDF.config.security;
 
 import java.util.Collection;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.LockedException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -20,9 +18,15 @@ import stirling.software.SPDF.repository.UserRepository;
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
 
-    @Autowired private UserRepository userRepository;
+    private final UserRepository userRepository;
 
-    @Autowired private LoginAttemptService loginAttemptService;
+    private final LoginAttemptService loginAttemptService;
+
+    public CustomUserDetailsService(
+            UserRepository userRepository, LoginAttemptService loginAttemptService) {
+        this.userRepository = userRepository;
+        this.loginAttemptService = loginAttemptService;
+    }
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
@@ -33,16 +37,13 @@ public class CustomUserDetailsService implements UserDetailsService {
                                 () ->
                                         new UsernameNotFoundException(
                                                 "No user found with username: " + username));
-
         if (loginAttemptService.isBlocked(username)) {
             throw new LockedException(
                     "Your account has been locked due to too many failed login attempts.");
         }
-
         if (!user.hasPassword()) {
             throw new IllegalArgumentException("Password must not be null");
         }
-
         return new org.springframework.security.core.userdetails.User(
                 user.getUsername(),
                 user.getPassword(),
@@ -56,6 +57,6 @@ public class CustomUserDetailsService implements UserDetailsService {
     private Collection<? extends GrantedAuthority> getAuthorities(Set<Authority> authorities) {
         return authorities.stream()
                 .map(authority -> new SimpleGrantedAuthority(authority.getAuthority()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
