@@ -1,10 +1,9 @@
 package stirling.software.SPDF.config.security;
 
 import java.io.IOException;
+import java.sql.SQLException;
 import java.util.*;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
 import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -18,47 +17,78 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import stirling.software.SPDF.config.DatabaseBackupInterface;
+import lombok.extern.slf4j.Slf4j;
+
+import stirling.software.SPDF.config.interfaces.DatabaseInterface;
+import stirling.software.SPDF.config.security.saml2.CustomSaml2AuthenticatedPrincipal;
 import stirling.software.SPDF.config.security.session.SessionPersistentRegistry;
 import stirling.software.SPDF.controller.api.pipeline.UserServiceInterface;
-import stirling.software.SPDF.model.AuthenticationType;
-import stirling.software.SPDF.model.Authority;
-import stirling.software.SPDF.model.Role;
-import stirling.software.SPDF.model.User;
+import stirling.software.SPDF.model.*;
+import stirling.software.SPDF.model.exception.UnsupportedProviderException;
 import stirling.software.SPDF.repository.AuthorityRepository;
 import stirling.software.SPDF.repository.UserRepository;
 
 @Service
+@Slf4j
 public class UserService implements UserServiceInterface {
 
-    @Autowired private UserRepository userRepository;
+    private final UserRepository userRepository;
 
-    @Autowired private AuthorityRepository authorityRepository;
+    private final AuthorityRepository authorityRepository;
 
-    @Autowired private PasswordEncoder passwordEncoder;
+    private final PasswordEncoder passwordEncoder;
 
-    @Autowired private MessageSource messageSource;
+    private final MessageSource messageSource;
 
-    @Autowired private SessionPersistentRegistry sessionRegistry;
+    private final SessionPersistentRegistry sessionRegistry;
 
-    @Autowired DatabaseBackupInterface databaseBackupHelper;
+    private final DatabaseInterface databaseService;
+
+    private final ApplicationProperties applicationProperties;
+
+    public UserService(
+            UserRepository userRepository,
+            AuthorityRepository authorityRepository,
+            PasswordEncoder passwordEncoder,
+            MessageSource messageSource,
+            SessionPersistentRegistry sessionRegistry,
+            DatabaseInterface databaseService,
+            ApplicationProperties applicationProperties) {
+        this.userRepository = userRepository;
+        this.authorityRepository = authorityRepository;
+        this.passwordEncoder = passwordEncoder;
+        this.messageSource = messageSource;
+        this.sessionRegistry = sessionRegistry;
+        this.databaseService = databaseService;
+        this.applicationProperties = applicationProperties;
+    }
+
+    @Transactional
+    public void migrateOauth2ToSSO() {
+        userRepository
+                .findByAuthenticationTypeIgnoreCase("OAUTH2")
+                .forEach(
+                        user -> {
+                            user.setAuthenticationType(AuthenticationType.SSO);
+                            userRepository.save(user);
+                        });
+    }
 
     // Handle OAUTH2 login and user auto creation.
-    public boolean processOAuth2PostLogin(String username, boolean autoCreateUser)
-            throws IllegalArgumentException, IOException {
+    public void processSSOPostLogin(String username, boolean autoCreateUser)
+            throws IllegalArgumentException, SQLException, UnsupportedProviderException {
         if (!isUsernameValid(username)) {
-            return false;
+            return;
         }
         Optional<User> existingUser = findByUsernameIgnoreCase(username);
         if (existingUser.isPresent()) {
-            return true;
+            return;
         }
         if (autoCreateUser) {
-            saveUser(username, AuthenticationType.OAUTH2);
-            return true;
+            saveUser(username, AuthenticationType.SSO);
         }
-        return false;
     }
 
     public Authentication getAuthentication(String apiKey) {
@@ -66,47 +96,52 @@ public class UserService implements UserServiceInterface {
         if (!user.isPresent()) {
             throw new UsernameNotFoundException("API key is not valid");
         }
-
         // Convert the user into an Authentication object
-        return new UsernamePasswordAuthenticationToken(
-                user, // principal (typically the user)
-                null, // credentials (we don't expose the password or API key here)
-                getAuthorities(user.get()) // user's authorities (roles/permissions)
-                );
+        return new UsernamePasswordAuthenticationToken( // principal (typically the user)
+                user, // credentials (we don't expose the password or API key here)
+                null, // user's authorities (roles/permissions)
+                getAuthorities(user.get()));
     }
 
     private Collection<? extends GrantedAuthority> getAuthorities(User user) {
         // Convert each Authority object into a SimpleGrantedAuthority object.
         return user.getAuthorities().stream()
                 .map((Authority authority) -> new SimpleGrantedAuthority(authority.getAuthority()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String generateApiKey() {
         String apiKey;
         do {
             apiKey = UUID.randomUUID().toString();
-        } while (userRepository.findByApiKey(apiKey).isPresent()); // Ensure uniqueness
+        } while ( // Ensure uniqueness
+        userRepository.findByApiKey(apiKey).isPresent());
         return apiKey;
     }
 
     public User addApiKeyToUser(String username) {
-        Optional<User> user = findByUsernameIgnoreCase(username);
-        if (user.isPresent()) {
-            user.get().setApiKey(generateApiKey());
-            return userRepository.save(user.get());
+        Optional<User> userOpt = findByUsernameIgnoreCase(username);
+        User user = saveUser(userOpt, generateApiKey());
+        try {
+            databaseService.exportDatabase();
+        } catch (SQLException | UnsupportedProviderException e) {
+            log.error("Error exporting database after adding API key to user", e);
         }
-        throw new UsernameNotFoundException("User not found");
+        return user;
     }
 
     public User refreshApiKeyForUser(String username) {
-        return addApiKeyToUser(username); // reuse the add API key method for refreshing
+        // reuse the add API key method for refreshing
+        return addApiKeyToUser(username);
     }
 
     public String getApiKeyForUser(String username) {
         User user =
                 findByUsernameIgnoreCase(username)
                         .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+        if (user.getApiKey() == null || user.getApiKey().length() == 0) {
+            user = addApiKeyToUser(username);
+        }
         return user.getApiKey();
     }
 
@@ -120,11 +155,11 @@ public class UserService implements UserServiceInterface {
 
     public Optional<User> loadUserByApiKey(String apiKey) {
         Optional<User> user = userRepository.findByApiKey(apiKey);
-
         if (user.isPresent()) {
             return user;
         }
-        return null; // or throw an exception
+        // or throw an exception
+        return null;
     }
 
     public boolean validateApiKeyForUser(String username, String apiKey) {
@@ -133,12 +168,20 @@ public class UserService implements UserServiceInterface {
     }
 
     public void saveUser(String username, AuthenticationType authenticationType)
-            throws IllegalArgumentException, IOException {
+            throws IllegalArgumentException, SQLException, UnsupportedProviderException {
         saveUser(username, authenticationType, Role.USER.getRoleId());
     }
 
+    private User saveUser(Optional<User> user, String apiKey) {
+        if (user.isPresent()) {
+            user.get().setApiKey(apiKey);
+            return userRepository.save(user.get());
+        }
+        throw new UsernameNotFoundException("User not found");
+    }
+
     public void saveUser(String username, AuthenticationType authenticationType, String role)
-            throws IllegalArgumentException, IOException {
+            throws IllegalArgumentException, SQLException, UnsupportedProviderException {
         if (!isUsernameValid(username)) {
             throw new IllegalArgumentException(getInvalidUsernameMessage());
         }
@@ -149,11 +192,11 @@ public class UserService implements UserServiceInterface {
         user.addAuthority(new Authority(role, user));
         user.setAuthenticationType(authenticationType);
         userRepository.save(user);
-        databaseBackupHelper.exportDatabase();
+        databaseService.exportDatabase();
     }
 
     public void saveUser(String username, String password)
-            throws IllegalArgumentException, IOException {
+            throws IllegalArgumentException, SQLException, UnsupportedProviderException {
         if (!isUsernameValid(username)) {
             throw new IllegalArgumentException(getInvalidUsernameMessage());
         }
@@ -162,12 +205,13 @@ public class UserService implements UserServiceInterface {
         user.setPassword(passwordEncoder.encode(password));
         user.setEnabled(true);
         user.setAuthenticationType(AuthenticationType.WEB);
+        user.addAuthority(new Authority(Role.USER.getRoleId(), user));
         userRepository.save(user);
-        databaseBackupHelper.exportDatabase();
+        databaseService.exportDatabase();
     }
 
     public void saveUser(String username, String password, String role, boolean firstLogin)
-            throws IllegalArgumentException, IOException {
+            throws IllegalArgumentException, SQLException, UnsupportedProviderException {
         if (!isUsernameValid(username)) {
             throw new IllegalArgumentException(getInvalidUsernameMessage());
         }
@@ -179,12 +223,28 @@ public class UserService implements UserServiceInterface {
         user.setAuthenticationType(AuthenticationType.WEB);
         user.setFirstLogin(firstLogin);
         userRepository.save(user);
-        databaseBackupHelper.exportDatabase();
+        databaseService.exportDatabase();
     }
 
     public void saveUser(String username, String password, String role)
-            throws IllegalArgumentException, IOException {
+            throws IllegalArgumentException, SQLException, UnsupportedProviderException {
         saveUser(username, password, role, false);
+    }
+
+    public void saveUser(String username, String password, boolean firstLogin, boolean enabled)
+            throws IllegalArgumentException, SQLException, UnsupportedProviderException {
+        if (!isUsernameValid(username)) {
+            throw new IllegalArgumentException(getInvalidUsernameMessage());
+        }
+        User user = new User();
+        user.setUsername(username);
+        user.setPassword(passwordEncoder.encode(password));
+        user.addAuthority(new Authority(Role.USER.getRoleId(), user));
+        user.setEnabled(enabled);
+        user.setAuthenticationType(AuthenticationType.WEB);
+        user.setFirstLogin(firstLogin);
+        userRepository.save(user);
+        databaseService.exportDatabase();
     }
 
     public void deleteUser(String username) {
@@ -217,21 +277,19 @@ public class UserService implements UserServiceInterface {
     }
 
     public void updateUserSettings(String username, Map<String, String> updates)
-            throws IOException {
+            throws SQLException, UnsupportedProviderException {
         Optional<User> userOpt = findByUsernameIgnoreCaseWithSettings(username);
         if (userOpt.isPresent()) {
             User user = userOpt.get();
             Map<String, String> settingsMap = user.getSettings();
-
             if (settingsMap == null) {
                 settingsMap = new HashMap<>();
             }
             settingsMap.clear();
             settingsMap.putAll(updates);
             user.setSettings(settingsMap);
-
             userRepository.save(user);
-            databaseBackupHelper.exportDatabase();
+            databaseService.exportDatabase();
         }
     }
 
@@ -252,38 +310,45 @@ public class UserService implements UserServiceInterface {
     }
 
     public void changeUsername(User user, String newUsername)
-            throws IllegalArgumentException, IOException {
+            throws IllegalArgumentException,
+                    IOException,
+                    SQLException,
+                    UnsupportedProviderException {
         if (!isUsernameValid(newUsername)) {
             throw new IllegalArgumentException(getInvalidUsernameMessage());
         }
         user.setUsername(newUsername);
         userRepository.save(user);
-        databaseBackupHelper.exportDatabase();
+        databaseService.exportDatabase();
     }
 
-    public void changePassword(User user, String newPassword) throws IOException {
+    public void changePassword(User user, String newPassword)
+            throws SQLException, UnsupportedProviderException {
         user.setPassword(passwordEncoder.encode(newPassword));
         userRepository.save(user);
-        databaseBackupHelper.exportDatabase();
+        databaseService.exportDatabase();
     }
 
-    public void changeFirstUse(User user, boolean firstUse) throws IOException {
+    public void changeFirstUse(User user, boolean firstUse)
+            throws SQLException, UnsupportedProviderException {
         user.setFirstLogin(firstUse);
         userRepository.save(user);
-        databaseBackupHelper.exportDatabase();
+        databaseService.exportDatabase();
     }
 
-    public void changeRole(User user, String newRole) throws IOException {
+    public void changeRole(User user, String newRole)
+            throws SQLException, UnsupportedProviderException {
         Authority userAuthority = this.findRole(user);
         userAuthority.setAuthority(newRole);
         authorityRepository.save(userAuthority);
-        databaseBackupHelper.exportDatabase();
+        databaseService.exportDatabase();
     }
 
-    public void changeUserEnabled(User user, Boolean enbeled) throws IOException {
+    public void changeUserEnabled(User user, Boolean enbeled)
+            throws SQLException, UnsupportedProviderException {
         user.setEnabled(enbeled);
         userRepository.save(user);
-        databaseBackupHelper.exportDatabase();
+        databaseService.exportDatabase();
     }
 
     public boolean isPasswordCorrect(User user, String currentPassword) {
@@ -292,13 +357,21 @@ public class UserService implements UserServiceInterface {
 
     public boolean isUsernameValid(String username) {
         // Checks whether the simple username is formatted correctly
+        // Regular expression for user name: Min. 3 characters, max. 50 characters
         boolean isValidSimpleUsername =
-                username.matches("^[a-zA-Z0-9][a-zA-Z0-9@._+-]*[a-zA-Z0-9]$");
+                username.matches("^[a-zA-Z0-9](?!.*[-@._+]{2,})[a-zA-Z0-9@._+-]{1,48}[a-zA-Z0-9]$");
+
         // Checks whether the email address is formatted correctly
+        // Regular expression for email addresses: Max. 320 characters, with RFC-like validation
         boolean isValidEmail =
                 username.matches(
-                        "^(?=.{1,64}@)[A-Za-z0-9]+(\\.[A-Za-z0-9_+.-]+)*@[^-][A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*(\\.[A-Za-z]{2,})$");
-        return isValidSimpleUsername || isValidEmail;
+                        "^(?=.{1,320}$)(?=.{1,64}@)[A-Za-z0-9](?:[A-Za-z0-9_.+-]*[A-Za-z0-9])?@[^-][A-Za-z0-9-]+(?:\\\\.[A-Za-z0-9-]+)*(?:\\\\.[A-Za-z]{2,})$");
+
+        List<String> notAllowedUserList = new ArrayList<>();
+        notAllowedUserList.add("ALL_USERS".toLowerCase());
+        notAllowedUserList.add("anonymoususer");
+        boolean notAllowedUser = notAllowedUserList.contains(username.toLowerCase());
+        return (isValidSimpleUsername || isValidEmail) && !notAllowedUser;
     }
 
     private String getInvalidUsernameMessage() {
@@ -325,17 +398,18 @@ public class UserService implements UserServiceInterface {
 
     public void invalidateUserSessions(String username) {
         String usernameP = "";
+
         for (Object principal : sessionRegistry.getAllPrincipals()) {
             for (SessionInformation sessionsInformation :
                     sessionRegistry.getAllSessions(principal, false)) {
-                if (principal instanceof UserDetails) {
-                    UserDetails userDetails = (UserDetails) principal;
-                    usernameP = userDetails.getUsername();
-                } else if (principal instanceof OAuth2User) {
-                    OAuth2User oAuth2User = (OAuth2User) principal;
+                if (principal instanceof UserDetails detailsUser) {
+                    usernameP = detailsUser.getUsername();
+                } else if (principal instanceof OAuth2User oAuth2User) {
                     usernameP = oAuth2User.getName();
-                } else if (principal instanceof String) {
-                    usernameP = (String) principal;
+                } else if (principal instanceof CustomSaml2AuthenticatedPrincipal saml2User) {
+                    usernameP = saml2User.name();
+                } else if (principal instanceof String stringUser) {
+                    usernameP = stringUser;
                 }
                 if (usernameP.equalsIgnoreCase(username)) {
                     sessionRegistry.expireSession(sessionsInformation.getSessionId());
@@ -347,10 +421,66 @@ public class UserService implements UserServiceInterface {
     public String getCurrentUsername() {
         Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
 
-        if (principal instanceof UserDetails) {
-            return ((UserDetails) principal).getUsername();
-        } else {
-            return principal.toString();
+        if (principal instanceof UserDetails detailsUser) {
+            return detailsUser.getUsername();
+        } else if (principal instanceof OAuth2User oAuth2User) {
+            return oAuth2User.getAttribute(
+                    applicationProperties.getSecurity().getOauth2().getUseAsUsername());
+        } else if (principal instanceof CustomSaml2AuthenticatedPrincipal saml2User) {
+            return saml2User.name();
+        } else if (principal instanceof String stringUser) {
+            return stringUser;
         }
+        return null;
+    }
+
+    @Transactional
+    public void syncCustomApiUser(String customApiKey) {
+        if (customApiKey == null || customApiKey.trim().isBlank()) {
+            return;
+        }
+
+        String username = "CUSTOM_API_USER";
+        Optional<User> existingUser = findByUsernameIgnoreCase(username);
+
+        existingUser.ifPresentOrElse(
+                user -> {
+                    // Update API key if it has changed
+                    User updatedUser = existingUser.get();
+
+                    if (!customApiKey.equals(updatedUser.getApiKey())) {
+                        updatedUser.setApiKey(customApiKey);
+                        userRepository.save(updatedUser);
+                    }
+                },
+                () -> {
+                    // Create new user with API role
+                    User user = new User();
+                    user.setUsername(username);
+                    user.setPassword(UUID.randomUUID().toString());
+                    user.setEnabled(true);
+                    user.setFirstLogin(false);
+                    user.setAuthenticationType(AuthenticationType.WEB);
+                    user.setApiKey(customApiKey);
+                    user.addAuthority(new Authority(Role.INTERNAL_API_USER.getRoleId(), user));
+                    userRepository.save(user);
+                });
+
+        try {
+            databaseService.exportDatabase();
+        } catch (SQLException | UnsupportedProviderException e) {
+            log.error("Error exporting database after synchronising custom API user", e);
+        }
+    }
+
+    @Override
+    public long getTotalUsersCount() {
+        // Count all users in the database
+        long userCount = userRepository.count();
+        // Exclude the internal API user from the count
+        if (findByUsernameIgnoreCase(Role.INTERNAL_API_USER.getRoleId()).isPresent()) {
+            userCount -= 1;
+        }
+        return userCount;
     }
 }
